--- a/index.html
+++ b/index.html
@@ -11,7 +11,48 @@
   <title>Document</title>
 </head>
 
+
 <body>
+  <div class="modal is-active">
+    <div class="modal-background"></div>
+    <div class="modal-content">
+      <div class="box">
+        <article class="media">
+          <div class="media-left">
+            <figure class="image is-64x64">
+              <img src="https://bulma.io/images/placeholders/128x128.png" alt="Image">
+            </figure>
+          </div>
+          <div class="media-content">
+            <div class="content">
+              <p>
+                <strong>John Smith</strong> <small>@johnsmith</small> <small>31m</small>
+                <br>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean efficitur sit amet massa fringilla egestas. Nullam condimentum luctus turpis.
+              </p>
+            </div>
+            <nav class="level is-mobile">
+              <div class="level-left">
+                <a class="level-item" aria-label="retweet">
+                    <span class="icon is-small">
+                      <i class="fas fa-retweet" aria-hidden="true"></i>
+                    </span>
+                  </a>
+                  <a class="level-item" aria-label="like">
+                    <span class="icon is-small">
+                      <i class="fas fa-heart" aria-hidden="true"></i>
+                  </span>
+                </a>
+              </div>
+            </nav>
+          </div>
+        </article>
+      </div>
+</div>
+    </div>
+    <button class="modal-close is-large" aria-label="close"></button>
+  </div>
+
   <section class="hero is-info mb-6" id="hero">
     <div class="hero-body">
       <p class="title">
@@ -26,10 +67,10 @@
   <div class="container mb-6">
     <div class="field is-grouped">
         <p class="control is-expanded">
-          <input class="input" type="text" placeholder="Buscar">
+          <input class="input input_search" type="text" placeholder="Buscar">
         </p>
         <p class="control">
-          <a class="button is-info">
+          <a class="button is-info handle_search">
             <span class="icon">
               <img src="assets/images/search.svg" >
             </span>
